infrastructure/apps/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway
  namespace: mrun-apps
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: mrun-platform
    app.kubernetes.io/component: gateway

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway

  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/part-of: mrun-platform
        app.kubernetes.io/component: gateway

    spec:
      serviceAccountName: api-gateway
      securityContext:
        fsGroup: 1000

      containers:

        - name: api-gateway

          image: mrun/api-gateway

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 3000

          resources:

            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

#          startupProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 5
#            failureThreshold: 30
#
#          readinessProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 5
#
#          livenessProbe:
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 10
