infrastructure/apps/api-gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: mrun-apps

  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: mrun-platform
    app.kubernetes.io/component: gateway
  annotations:
    consul.hashicorp.com/service-name: api-gateway
    consul.hashicorp.com/service-port: "3000"

spec:
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080

  type: NodePort
