infrastructure/apps/api-gateway/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: api-gateway
  namespace: mrun-apps

spec:

  podSelector:

    matchLabels:
      app.kubernetes.io/name: api-gateway

  policyTypes:
    - Ingress
    - Egress

  ingress:

    - from:

        - namespaceSelector: {}

  egress:

    - to:

        - namespaceSelector: {}
